--- a/views/layout.html
+++ b/views/layout.html
@@ -19,12 +19,25 @@
 </head>
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-	<div class="container">
-		<div class="content">
-			{{{body}}}
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">				
+				<a class="brand" href="#">Decide it</a>
+				<form class="navbar-search pull-left" action="">
+					<input type="text" class="search-query span2" placeholder="Search">
+				</form>
+				<ul class="nav pull-right">
+					<li><a href="/logout">Logout</a></li>
+				</ul>			   
+			</div>
 		</div>
 	</div>
-
+	
+	<div class="container">
+		{{{body}}}
+	</div>
+	
+	<div class="footer"></div>
 	<!--
 	<script>
 		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
