--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,11 @@
 <div class="content">
   <form action="/login" class="form-horizontal" method="post">
     <fieldset>
-      <legend>Sign in / Sign up</legend><br />
+      <legend>Login / Sign up</legend><br />
 
       <div class="alert alert-info">
         <p style="margin:0;">If you're a first time user, you
-        will be registered <strong>AND</strong> logged in.<br />
+        will be signed up <strong>AND</strong> logged in.<br />
         Otherwise you'll just be logged in. No email confirmation
         schennanigans.</p>
       </div>{{#if login_error}}
@@ -33,7 +33,7 @@
       </div>
 
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Signup/in</button>
+        <button type="submit" class="btn btn-primary">Login / Sign up</button>
 		<a data-toggle="modal" href="#myModal" class="btn btn-danger">Don't push this button!</a>
       </div>
     </fieldset>
