--- a/views/layout.html
+++ b/views/layout.html
@@ -22,8 +22,9 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">				
-				<a class="brand" href="#">Decide it</a>
+				<a class="brand" href="/">Decide it</a>
 				<ul class="nav pull-right">
+					<li><a href="/submit">Submit a topic</a></li>
 					{{#if user}}
 						<li><a href="/logout">Logout</a></li>
 					{{else}}
@@ -37,8 +38,7 @@
 	<div class="container">
 		{{{body}}}
 	</div>
-	
-	<div class="footer"></div>
+
 	<!--
 	<script>
 		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
