Changed the background, some styling fixes

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -1,5 +1,5 @@
 body {
-	background:url('/images/whitey.png');
+	/* background:url('/images/whitey.png'); */
 }
 .container {
 	width:820px !important;
