--- a/views/layout.html
+++ b/views/layout.html
@@ -22,7 +22,7 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">				
-				<a class="brand" href="/">Decide it</a>
+				<a class="brand" href="/">Get Decided</a>
 				<ul class="nav pull-right">
 					<li><a href="/submit">Submit a topic</a></li>
 					{{#if user}}
@@ -39,14 +39,12 @@
 		{{{body}}}
 	</div>
 
-	<!--
 	<script>
-		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+		var _gaq=[['_setAccount','UA-30317075-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
 		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
 		s.parentNode.insertBefore(g,s)}(document,'script'));
 	</script>
-	-->
 
 </body>
 </html>
